<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:src="@android:drawable/sym_def_app_icon"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etWorkPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/work_position_hint"
        android:inputType="text"
        android:padding="16dp"
        android:text="@string/work_position_text"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/full_name_hint"
        android:inputType="text"
        android:padding="16dp"
        android:text="@string/full_name_text"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="@+id/etWorkPosition"
        app:layout_constraintStart_toStartOf="@+id/etWorkPosition"
        app:layout_constraintTop_toBottomOf="@+id/etWorkPosition" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:padding="16dp"
        android:text="@string/phone_number_text"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="@+id/etFullName"
        app:layout_constraintStart_toStartOf="@+id/etFullName"
        app:layout_constraintTop_toBottomOf="@+id/etFullName" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:text="@string/email_text"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/spinner_dropdown_background"
        android:entries="@array/countries_array"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/spinnerGenre"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Spinner
        android:id="@+id/spinnerGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/spinner_dropdown_background"
        android:entries="@array/gender_array"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCountry"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toEndOf="@+id/spinnerCountry"
        app:layout_constraintTop_toTopOf="@+id/spinnerCountry" />

</androidx.constraintlayout.widget.ConstraintLayout>
